2009-04-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSColorWell.m: Only send action if color changes ... fix
	for bug #26277

2009-04-19 00:46-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSSearchFieldCell.h: Give the values assigned in 
	Cocoa to the enum.  Patch by: doug@riverrock.org
	* Source/NSSearchFieldCell.m: Implemented search menu template and
	recent items.  Patch by: doug@rivverrock.org
	* Source/NSSearchField.m: Call cell methods to use search menu.
	Patch by: doug@riverrock.org

2009-04-19 00:23-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSApplication.m: Make certain that a sheet is always placed
	above the window it's supposed to appear relative to.   Change
	to runModalForWindow:relativeToWindow:.

2009-04-18 23:21-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSScrollView.m: If the scrollview has scrollers,
	don't pay attention to the hidden flag in nib loading.
	* Source/NSTableView.m: if the table has a cornerview, don't
	pay attention to the hidden flag in nib loading.  
	NOTE: In both instances it appears that Cocoa sets the hidden flag 
	when autohide is set to true.   GNUstep handles this case differently,
	so it's okay to ignore this flag when the scroller is in an
	NSScrollView.

2009-04-16 16:05-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Revert last change.

2009-04-16 15:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Order front regardless to prevent reported 
	cases of problems when sheets/panels bring up additional 
	sheets/panels.

2009-04-14 21:24-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSHorizontalTypesetter.m: Use thread dictionary to hold
	the instance of the typesetter for that thread.
	* Source/NSStringDrawing.m: Add locks to methods to prevent 
	modification of static variables by separate threads from 
	causing applications to get glyph generation errors.