@@ -1,3 +1,11 @@
+2009-04-25 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/AppKit/NSBezierPath.h,
+	* Source/NSBezierPath.m	(+bezierPathWithRoundedRect:xRadius:yRadius:,
+	-appendBezierPathWithRoundedRect:xRadius:yRadius:):
+	New 10.5 methods.
+	Patch by Fred Morcos <fred.morcos@gmail.com>
+
 2009-04-24 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSColorWell.m: Only send action if color changes ... fix
